# analisis-compras-web

./: Analisis_compra_web.ipynb  README.md  pyproject.toml  requirements.txt
modelos/: modelo_final.pkl
utils/: model_functions.py
