[project]
name = "analisis-compras-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "imbalanced-learn==0.13.0",
    "imblearn==0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kds==0.1.3",
    "matplotlib==3.10.1",
    "numpy==2.0.2",
    "optuna==4.2.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "xgboost==3.0.0",
]
